test/testData/parser/negative/incorrectTypes.c


int x;

typedef int x;


int void y;

double void unsigned *z;
